RESOLVED FIXED98858
[Chromium] Fix harfbuzz-ng related code after r130231
https://bugs.webkit.org/show_bug.cgi?id=98858
Summary [Chromium] Fix harfbuzz-ng related code after r130231
Kenichi Ishibashi
Reported 2012-10-09 22:17:59 PDT
r130231 didn't replace some first/second with key/value of harfbuzz-ng related code.
Attachments
Patch (2.98 KB, patch)
2012-10-09 22:20 PDT, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2012-10-09 22:20:30 PDT
Kenichi Ishibashi
Comment 2 2012-10-09 22:21:09 PDT
Kent-san, could you do rubber-stamp review? It's trivial fix.
Kent Tamura
Comment 3 2012-10-09 22:32:42 PDT
Comment on attachment 167925 [details] Patch ok
Kenichi Ishibashi
Comment 4 2012-10-09 22:33:20 PDT
Thanks!
WebKit Review Bot
Comment 5 2012-10-09 23:23:32 PDT
Comment on attachment 167925 [details] Patch Clearing flags on attachment: 167925 Committed r130854: <http://trac.webkit.org/changeset/130854>
WebKit Review Bot
Comment 6 2012-10-09 23:23:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.