[Chromium] Fix harfbuzz-ng related code after r130231 https://bugs.webkit.org/show_bug.cgi?id=98858

Reviewed by Kent Tamura.

Replace first/second with key/value.

No new tests. No changes in behavior.

* platform/graphics/harfbuzz/ng/HarfBuzzNGFaceSkia.cpp:
(WebCore::harfbuzzGetGlyph):
* platform/graphics/skia/SimpleFontDataSkia.cpp:
(WebCore::SimpleFontData::canRenderCombiningCharacterSequence):


Canonical link: https://commits.webkit.org/116838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130854 268f45cc-cd09-0410-ab3c-d52691b4dbfc